<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Podling</string>
    <string name="menu_settings">Settings</string>
    <string name="no_groups">No groups.</string>
    <string name="no_conversations">No conversations.</string>
    <string name="no_group_members">No members.</string>
    <string name="no_posts">No posts.</string>
    <string name="authentication_login">Sign in</string>
    <string name="authentication_email_hint">Email address</string>
    <string name="authentication_password_hint">Password</string>
    <string name="logo_description">podling logo</string>
    <string name="tagline">social glue for teams</string>
    <string name="create_pod">What do you want to call your pod?</string>
    <string name="create_pod_hint">Pod name</string>
    <string name="create_group_submit">Create</string>
    <string name="like_post">Like</string>
    <string name="unlike_post">Unlike</string>
    <string name="create_conversation_hint">Start a new discussion</string>
    <string name="create_post_hint">Write a response</string>
    <string name="reply_to_post">Reply</string>
    <string name="user_avatar_description">user_avatar_description</string>
    <string name="error_conversation_load">Coulnd\'t load conversations</string>
    <string name="error_groups_load">Couldn\'t load groups</string>
    <string name="error_group_members_load">Couldn\'t load group members</string>
    <string name="error_posts_load">Couldn\'t load posts</string>

</resources>