<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#222224" >

    <LinearLayout
        android:id="@+id/header"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dip"
        android:layout_marginTop="20dip"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingBottom="5dip"
        android:paddingTop="5dip" >

        <ImageView
            android:id="@+id/podling_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/logo_description"
            android:src="@drawable/logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip"
            android:text="@string/tagline"
            android:textColor="#2B97F0" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/authentication_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/header"
        android:orientation="vertical"
        android:padding="10dip" >

        <EditText
            android:id="@+id/authentication_email"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dip"
            android:background="#fff"
            android:hint="@string/authentication_email_hint"
            android:inputType="textEmailAddress"
            android:padding="10dip"
            android:singleLine="true" >

            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/authentication_password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="#fff"
            android:fontFamily="sans-serif"
            android:hint="@string/authentication_password_hint"
            android:inputType="textPassword"
            android:padding="10dip"
            android:singleLine="true" />
    </LinearLayout>

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/authentication_details"
        android:layout_marginRight="10dp"
        android:layout_marginTop="15dp"
        android:background="#2B97F0"
        android:paddingBottom="5dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:paddingTop="5dp"
        android:text="@string/authentication_login"
        android:textColor="#fff" />

</RelativeLayout>