<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:background="#222224"
    android:orientation="vertical"
    android:padding="10dip" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:layout_marginBottom="20dip"
        android:layout_marginTop="10dip"
        android:gravity="center"
        android:text="@string/create_pod"
        android:textColor="#fff" />

    <EditText
        android:id="@+id/create_group_name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dip"
        android:background="#fff"
        android:hint="@string/create_pod_hint"
        android:padding="10dip"
        android:singleLine="true" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/btn_create_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginTop="10dp"
        android:background="#2B97F0"
        android:paddingBottom="5dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:paddingTop="5dp"
        android:text="@string/create_group_submit"
        android:textColor="#fff" />

</LinearLayout>